--- a/m03_v01_store_sales_prediction.ipynb
+++ b/m03_v01_store_sales_prediction.ipynb
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af3b3fad",
+   "id": "b4522ed2",
    "metadata": {},
    "source": [
     "# 2.0. STEP 02 - FEATURING ENGINEERING"
@@ -1142,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "ec66ff81",
+   "id": "2f27fb5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "85ba0efd",
+   "id": "cd7986f5",
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bc62ce8",
+   "id": "e14c8f4e",
    "metadata": {},
    "source": [
     "## 2.1. Mind Map Hypotheses"
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "73039248",
+   "id": "33ca37c4",
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bbc6b51",
+   "id": "046a441a",
    "metadata": {},
    "source": [
     "## 2.2. Hypotheses Creation"
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eea4b254",
+   "id": "74d7c3ec",
    "metadata": {},
    "source": [
     "### 2.2.1 Hypotheses Store"
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a676d3da",
+   "id": "7980bd14",
    "metadata": {},
    "source": [
     "**1.** Lojas com número maior de funcionários deveriam vender mais.\n",
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32dff4f4",
+   "id": "fc7f40a7",
    "metadata": {},
    "source": [
     "### 2.2.2 Hypotheses Product"
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "710a0586",
+   "id": "6860ee1b",
    "metadata": {},
    "source": [
     "**1.** Lojas que investem mais em Marketing deveriam vender mais.\n",
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f172cce",
+   "id": "685960b3",
    "metadata": {},
    "source": [
     "### 2.2.3 Hypotheses Time"
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e7ddf11",
+   "id": "1bf1530e",
    "metadata": {},
    "source": [
     "**1.** Lojas abertas durante o feriado de Natal deveriam vender mais.\n",
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb1ecf4f",
+   "id": "fe918103",
    "metadata": {},
    "source": [
     "## 2.3 Hypotheses Final List"
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7b2658a",
+   "id": "17c08b3d",
    "metadata": {},
    "source": [
     "**1.** Lojas com maior sortimentos deveriam vender mais.\n",
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e20cf24",
+   "id": "41df8b9d",
    "metadata": {},
    "source": [
     "**4.** Lojas com promoções ativas por mais tempo deveriam vender mais.\n",
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9646ddf4",
+   "id": "05d224ee",
    "metadata": {},
    "source": [
     "**7.** Lojas abertas durante o feriado de Natal deveriam vender mais.\n",
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0efefbaa",
+   "id": "e412a1a6",
    "metadata": {},
    "source": [
     "## 2.3. Feature Engineering"
@@ -1431,7 +1431,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "8255cba5",
+   "id": "dd96c32c",
    "metadata": {
     "scrolled": true
    },
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "0708c649",
+   "id": "9b4b40b3",
    "metadata": {},
    "outputs": [
     {
@@ -1853,9 +1853,344 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31b04d8e",
+   "metadata": {},
+   "source": [
+    "# 3.0. STEP 03 - FILTRAGEM DE VARIÁVEIS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "266a20d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = df2.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "cb7ea4da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>date</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>customers</th>\n",
+       "      <th>open</th>\n",
+       "      <th>promo</th>\n",
+       "      <th>state_holiday</th>\n",
+       "      <th>school_holiday</th>\n",
+       "      <th>store_type</th>\n",
+       "      <th>...</th>\n",
+       "      <th>is_promo</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>week_of_year</th>\n",
+       "      <th>year_week</th>\n",
+       "      <th>competition_since</th>\n",
+       "      <th>competition_time_month</th>\n",
+       "      <th>promo_since</th>\n",
+       "      <th>promo_time_week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>5263</td>\n",
+       "      <td>555</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>1</td>\n",
+       "      <td>c</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2008-09-01</td>\n",
+       "      <td>84</td>\n",
+       "      <td>2015-07-27</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>6064</td>\n",
+       "      <td>625</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2007-11-01</td>\n",
+       "      <td>94</td>\n",
+       "      <td>2010-03-22</td>\n",
+       "      <td>279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>8314</td>\n",
+       "      <td>821</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2006-12-01</td>\n",
+       "      <td>105</td>\n",
+       "      <td>2011-03-28</td>\n",
+       "      <td>226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>13995</td>\n",
+       "      <td>1498</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>1</td>\n",
+       "      <td>c</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2009-09-01</td>\n",
+       "      <td>71</td>\n",
+       "      <td>2015-07-27</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>4822</td>\n",
+       "      <td>559</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2015-04-01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2015-07-27</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   store  day_of_week       date  sales  customers  open  promo state_holiday  \\\n",
+       "0      1            5 2015-07-31   5263        555     1      1   regular_day   \n",
+       "1      2            5 2015-07-31   6064        625     1      1   regular_day   \n",
+       "2      3            5 2015-07-31   8314        821     1      1   regular_day   \n",
+       "3      4            5 2015-07-31  13995       1498     1      1   regular_day   \n",
+       "4      5            5 2015-07-31   4822        559     1      1   regular_day   \n",
+       "\n",
+       "   school_holiday store_type  ... is_promo  year  month  day  week_of_year  \\\n",
+       "0               1          c  ...        0  2015      7   31            31   \n",
+       "1               1          a  ...        1  2015      7   31            31   \n",
+       "2               1          a  ...        1  2015      7   31            31   \n",
+       "3               1          c  ...        0  2015      7   31            31   \n",
+       "4               1          a  ...        0  2015      7   31            31   \n",
+       "\n",
+       "   year_week  competition_since competition_time_month promo_since  \\\n",
+       "0    2015-30         2008-09-01                     84  2015-07-27   \n",
+       "1    2015-30         2007-11-01                     94  2010-03-22   \n",
+       "2    2015-30         2006-12-01                    105  2011-03-28   \n",
+       "3    2015-30         2009-09-01                     71  2015-07-27   \n",
+       "4    2015-30         2015-04-01                      4  2015-07-27   \n",
+       "\n",
+       "   promo_time_week  \n",
+       "0                0  \n",
+       "1              279  \n",
+       "2              226  \n",
+       "3                0  \n",
+       "4                0  \n",
+       "\n",
+       "[5 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "dd807a67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1017209, 29)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44ca951f",
+   "metadata": {},
+   "source": [
+    "## 3.1. Filtragem das Linhas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "2f4a5aef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = df3[( df3['open'] != 0 ) & ( df3['sales'] > 0 )]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "c2547f28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(844338, 29)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73c2e2de",
+   "metadata": {},
+   "source": [
+    "## 3.2. Seleção das Colunas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "afb63ddd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols_drop = ['customers', 'open', 'promo_interval', 'month_map']\n",
+    "df3 = df3.drop( cols_drop, axis=1 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "a02034c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(844338, 25)"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.shape"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ffaf8c0",
+   "id": "4b8b40e0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1863,39 +2198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fc1803c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "110ff38e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "734021de",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68f35b70",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59680af0",
+   "id": "954a112c",
    "metadata": {},
    "outputs": [],
    "source": []
