--- a/m04_v01_store_sales_prediction.ipynb
+++ b/m04_v01_store_sales_prediction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 83,
    "id": "2146085d",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
     "from scipy import stats\n",
     "import scipy.stats as ss\n",
     "from IPython.core.display import HTML\n",
-    "from sklearn.preprocessing import RobustScaler, MinMaxScaler"
+    "from sklearn.preprocessing import RobustScaler, MinMaxScaler, LabelEncoder"
    ]
   },
   {
@@ -3451,225 +3451,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "52b922f5",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>store</th>\n",
-       "      <th>day_of_week</th>\n",
-       "      <th>date</th>\n",
-       "      <th>sales</th>\n",
-       "      <th>promo</th>\n",
-       "      <th>state_holiday</th>\n",
-       "      <th>school_holiday</th>\n",
-       "      <th>store_type</th>\n",
-       "      <th>assortment</th>\n",
-       "      <th>competition_distance</th>\n",
-       "      <th>competition_open_since_month</th>\n",
-       "      <th>competition_open_since_year</th>\n",
-       "      <th>promo2</th>\n",
-       "      <th>promo2_since_week</th>\n",
-       "      <th>promo2_since_year</th>\n",
-       "      <th>is_promo</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>day</th>\n",
-       "      <th>week_of_year</th>\n",
-       "      <th>year_week</th>\n",
-       "      <th>competition_since</th>\n",
-       "      <th>competition_time_month</th>\n",
-       "      <th>promo_since</th>\n",
-       "      <th>promo_time_week</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2015-07-31</td>\n",
-       "      <td>5263</td>\n",
-       "      <td>1</td>\n",
-       "      <td>regular_day</td>\n",
-       "      <td>1</td>\n",
-       "      <td>c</td>\n",
-       "      <td>basic</td>\n",
-       "      <td>1270.0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>0</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2015-30</td>\n",
-       "      <td>2008-09-01</td>\n",
-       "      <td>84</td>\n",
-       "      <td>2015-07-27</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2015-07-31</td>\n",
-       "      <td>6064</td>\n",
-       "      <td>1</td>\n",
-       "      <td>regular_day</td>\n",
-       "      <td>1</td>\n",
-       "      <td>a</td>\n",
-       "      <td>basic</td>\n",
-       "      <td>570.0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2015-30</td>\n",
-       "      <td>2007-11-01</td>\n",
-       "      <td>94</td>\n",
-       "      <td>2010-03-22</td>\n",
-       "      <td>279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2015-07-31</td>\n",
-       "      <td>8314</td>\n",
-       "      <td>1</td>\n",
-       "      <td>regular_day</td>\n",
-       "      <td>1</td>\n",
-       "      <td>a</td>\n",
-       "      <td>basic</td>\n",
-       "      <td>14130.0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2015-30</td>\n",
-       "      <td>2006-12-01</td>\n",
-       "      <td>105</td>\n",
-       "      <td>2011-03-28</td>\n",
-       "      <td>226</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2015-07-31</td>\n",
-       "      <td>13995</td>\n",
-       "      <td>1</td>\n",
-       "      <td>regular_day</td>\n",
-       "      <td>1</td>\n",
-       "      <td>c</td>\n",
-       "      <td>extended</td>\n",
-       "      <td>620.0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>0</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2015-30</td>\n",
-       "      <td>2009-09-01</td>\n",
-       "      <td>71</td>\n",
-       "      <td>2015-07-27</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2015-07-31</td>\n",
-       "      <td>4822</td>\n",
-       "      <td>1</td>\n",
-       "      <td>regular_day</td>\n",
-       "      <td>1</td>\n",
-       "      <td>a</td>\n",
-       "      <td>basic</td>\n",
-       "      <td>29910.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>0</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>7</td>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2015-30</td>\n",
-       "      <td>2015-04-01</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2015-07-27</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   store  day_of_week       date  sales  promo state_holiday  school_holiday store_type assortment  competition_distance  competition_open_since_month  competition_open_since_year  promo2  promo2_since_week  promo2_since_year  is_promo  year  month  day  week_of_year year_week competition_since  competition_time_month promo_since  promo_time_week\n",
-       "0      1            5 2015-07-31   5263      1   regular_day               1          c      basic                1270.0                             9                         2008       0                 31               2015         0  2015      7   31            31   2015-30        2008-09-01                      84  2015-07-27                0\n",
-       "1      2            5 2015-07-31   6064      1   regular_day               1          a      basic                 570.0                            11                         2007       1                 13               2010         1  2015      7   31            31   2015-30        2007-11-01                      94  2010-03-22              279\n",
-       "2      3            5 2015-07-31   8314      1   regular_day               1          a      basic               14130.0                            12                         2006       1                 14               2011         1  2015      7   31            31   2015-30        2006-12-01                     105  2011-03-28              226\n",
-       "3      4            5 2015-07-31  13995      1   regular_day               1          c   extended                 620.0                             9                         2009       0                 31               2015         0  2015      7   31            31   2015-30        2009-09-01                      71  2015-07-27                0\n",
-       "4      5            5 2015-07-31   4822      1   regular_day               1          a      basic               29910.0                             4                         2015       0                 31               2015         0  2015      7   31            31   2015-30        2015-04-01                       4  2015-07-27                0"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df5.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "b0fd14d0",
    "metadata": {},
@@ -3714,6 +3495,33 @@
    "metadata": {},
    "source": [
     "## 5.3. Transformação"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a2597ce",
+   "metadata": {},
+   "source": [
+    "### 5.3.1. Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "adcd68eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# state_holiday - One Hot Encoding\n",
+    "df5 = pd.get_dummies( df5, prefix=['state_holiday'], columns=['state_holiday'] )\n",
+    "\n",
+    "# store_type - Label Encoding\n",
+    "le = LabelEncoder()\n",
+    "df5['store_type'] = le.fit_transform( df5['store_type'] )\n",
+    "\n",
+    "# assortment - Ordinal Encoding\n",
+    "assortment_dict = {'basic': 1, 'extra': 2, 'extended': 3}\n",
+    "df5['assortment'] = df5['assortment'].map( assortment_dict )"
    ]
   },
   {
