--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -5890,7 +5890,7 @@
    "id": "72f8d9ac",
    "metadata": {},
    "source": [
-    "# 10.0. STEP 10 - DEPLOY MODEL TO PRODUCTION"
+    "# 10.0. STEP 10 - MODEL DEPLOYMENT"
    ]
   },
   {
